--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <input type="age" id="age">
             </div>
             </div>
+            </div>
+                <input type="submit" value="Submit" id="submit-form">
+            </div>
     </form>
 </body>
 </html>
